tdf#134592 DOCX import: preserve formatting of CREATEDATE fields

The create date of a document doesn't really change, so we can only
loose if the cached result of the field is not preserved.

Change-Id: I0105d9c5bb9a06cacc1f5fed2a10b6626fa80fd7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/110596
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>